logs/pachi-py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pachi_py'...
Listing './lib/python3.5/site-packages/pachi_py/pachi'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/distributed'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/joseki'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/media'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/montecarlo'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/patternplay'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/patternscan'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/playout'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/random'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/replay'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-play'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-play/autotest'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-regress'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-regress/by-falseeye'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-regress/by-ko'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-regress/by-ladder'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-regress/by-semeai'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-regress/games'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/t-unit'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/tactics'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/tools'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/tools/autobook'...
Compiling './lib/python3.5/site-packages/pachi_py/pachi/tools/sgf2gtp.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sgf2gtp.py, line 82)
Listing './lib/python3.5/site-packages/pachi_py/pachi/tools/sgflib'...
Compiling './lib/python3.5/site-packages/pachi_py/pachi/tools/sgflib/sgflib.py'...
***   File "./lib/python3.5/site-packages/pachi_py/pachi/tools/sgflib/sgflib.py", line 599
    print "\n\n********** Self-Test 1 **********\n"
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pachi_py/pachi/tools/sgflib/typelib.py'...
***   File "./lib/python3.5/site-packages/pachi_py/pachi/tools/sgflib/typelib.py", line 307
    TYPE = type(1L)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pachi_py/pachi/tools/twogtp.py'...
***   File "./lib/python3.5/site-packages/pachi_py/pachi/tools/twogtp.py", line 46
    print "Coords: <" + board_coords + ">"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pachi_py/pachi/uct'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/uct/plugin'...
Listing './lib/python3.5/site-packages/pachi_py/pachi/uct/policy'...
Listing './lib/python3.5/site-packages/pachi_py-0.0.21.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
